--- a/_posts/2020-10-26-day-1376.markdown
+++ b/_posts/2020-10-26-day-1376.markdown
@@ -1,4 +1,4 @@
----
+Planet Moo--Lah-
 title: Day 1376
 date: 2020-10-26 14:30:00 -07:00
 description: '"Covid, Covid. Covid, Covid, Covid, Covid."'
